--- a/scss/components/_vars.scss
+++ b/scss/components/_vars.scss
@@ -3,6 +3,11 @@ $main: #323264;
 $main-alt: #46466e;
 $main-soft: #686887;
 
+// socials
+$facebook: #435695;
+$telegram: #3cacdc;
+$linkedIn: #1178b3;
+
 // white
 $white: #ffffff;
 
