--- a/scss/main.scss
+++ b/scss/main.scss
@@ -56,3 +56,5 @@
 @import "./team/person-page";
 // page contact
 @import "./contacts";
+// publications-page
+@import "./publication/publications-page";
