--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ img {
   height: auto;
 }
 
-.contact-text, .person-contacts, .team-item-link, .links, .team-link, .services-name, .services-link, .nav-menu-links, .header-icon_links, .telephone-desctop, .telephone, .mobile-links {
+.contact-text, .person-contacts, .team-item-link, .links, .card-button, .publications-paragraph, .team-link, .services-name, .services-link, .nav-menu-links, .header-icon_links, .telephone-desctop, .telephone, .mobile-links {
   text-decoration: none;
 }
 
@@ -44,7 +44,7 @@ h6 {
   margin: 0;
 }
 
-.person-contact, .team-list, .owl-carousel, .advantages-list, .nav-menu-list-page, .card-list-grid, .clients-list, .cases-list, .services-list, .nav-menu-list, .language, .mobile-list {
+.post-social, .masonry-container, .person-contact, .team-list, .owl-carousel, .advantages-list, .nav-menu-list-page, .clients-list, .cases-list, .services-list, .nav-menu-list, .language, .mobile-list {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -114,6 +114,13 @@ h6 {
   .text {
     font-size: 21px;
   }
+}
+
+.paragraph {
+  font-size: 18px;
+  line-height: 1.4;
+  font-weight: normal;
+  color: #000000;
 }
 
 .current-service {
@@ -586,9 +593,18 @@ h6 {
   display: inline-block;
   width: 100%;
   padding: 11px;
+  font-size: 18px;
+  line-height: 1.4;
+  font-weight: normal;
+  color: #000000;
   background: #ffffff;
   border: 1px solid transparent;
   border-radius: 8px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input:hover, .input:focus {
+  border-color: #f0145a;
 }
 .input::-moz-placeholder {
   font-size: 18px;
@@ -1483,6 +1499,10 @@ h6 {
   }
 }
 
+.overflow-container-pub {
+  position: relative;
+}
+
 .publications-paragraph {
   font-weight: 700;
   font-size: 14px;
@@ -1492,82 +1512,35 @@ h6 {
   color: #24a3ff;
 }
 
-@media screen and (max-width: 639px) {
+@media screen and (max-width: 767px) {
   .card-description {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0, 2s ease-out;
+    display: none;
   }
 }
 
-.card-list-grid {
-  display: grid;
-}
-@media screen and (min-width: 640px) {
-  .card-list-grid {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-  }
+.masonry-item {
+  margin-bottom: 20px;
 }
 @media screen and (min-width: 1024px) {
-  .card-list-grid {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-areas: "article-one  article-two article-four" "article-three article-five article-six";
-    gap: 40px;
+  .masonry-item {
+    margin-bottom: 40px;
   }
 }
 
 @media screen and (max-width: 639px) {
-  .card-item-grid:nth-child(n+4) {
+  .masonry-item:nth-child(n+4) {
     display: none;
   }
 }
 
 @media screen and (min-width: 640px) and (max-width: 1023px) {
-  .card-item-grid:nth-child(n+5) {
+  .masonry-item:nth-child(n+5) {
     display: none;
   }
 }
 
-.card-item-grid.is-visible {
+.masonry-item.is-visible {
   display: block;
-}
-
-@media screen and (min-width: 1024px) {
-  .article-one {
-    grid-area: article-one;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .article-two {
-    grid-area: article-two;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .article-three {
-    grid-area: article-three;
-    align-self: start;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .article-four {
-    grid-area: article-four;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .article-five {
-    grid-area: article-five;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .article-six {
-    grid-area: article-six;
-  }
 }
 
 .card {
@@ -1584,8 +1557,8 @@ h6 {
 }
 
 .card-button {
-  padding: 0;
-  margin: 0 0 10px 0;
+  display: inline-block;
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 18px;
   line-height: 1.16;
@@ -1594,6 +1567,8 @@ h6 {
 }
 
 .card-time {
+  display: block;
+  margin-bottom: 20px;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 1px;
@@ -2595,6 +2570,28 @@ h6 {
   color: #323264;
 }
 
+@media screen and (min-width: 1024px) {
+  .contact-desktop {
+    display: flex;
+    align-items: center;
+  }
+}
+
+.main-container-contact {
+  margin: 0 auto;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .main-container-contact {
+    width: 414px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .main-container-contact {
+    margin-right: 153px;
+  }
+}
+
 .contact-text {
   font-style: normal;
   font-weight: 400;
@@ -2614,14 +2611,15 @@ h6 {
 .contact-tel {
   display: inline-block;
   color: #46466e;
-  margin-top: 20px;
-  margin-bottom: 20px;
 }
 
 .contact-mail {
   display: inline-block;
-  margin-bottom: 20px;
   color: #24a3ff;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contact-mail:hover, .contact-mail:focus {
+  color: #f0145a;
 }
 
 .contact-link {
@@ -2639,4 +2637,211 @@ h6 {
   letter-spacing: 1px;
   text-transform: uppercase;
   color: #24a3ff;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contact-link-text:hover, .contact-link-text:focus {
+  color: #f0145a;
+}
+
+.contact-modal {
+  margin: 0 auto;
+  background-color: #f5f5fa;
+  padding: 20px;
+  max-width: 527px;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 1024px) {
+  .contact-modal {
+    margin-bottom: 80px;
+  }
+}
+
+.modal-title-contact {
+  margin-bottom: 20px;
+}
+
+.container-map {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.map-wrap {
+  overflow: hidden;
+  padding-bottom: 41.66%;
+  position: relative;
+  height: 600px;
+}
+
+.map-wrap iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
+.overflow-container {
+  padding: 20px;
+  background-color: #f5f5fa;
+}
+@media screen and (min-width: 768px) {
+  .overflow-container {
+    padding: 40px;
+  }
+}
+
+.masonry-container {
+  -moz-columns: 1;
+       columns: 1;
+}
+@media screen and (min-width: 640px) {
+  .masonry-container {
+    -moz-column-count: 2;
+         column-count: 2;
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .masonry-container {
+    -moz-column-count: 3;
+         column-count: 3;
+    -moz-column-gap: 40px;
+         column-gap: 40px;
+  }
+}
+
+.masonry-items {
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 1024px) {
+  .masonry-items {
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (max-width: 639px) {
+  .masonry-items:nth-child(n+6) {
+    display: none;
+  }
+}
+
+.masonry-item-image {
+  width: 100%;
+  border-radius: 8px 8px 0 0;
+}
+
+.masonry-item-heading {
+  font-size: 18px;
+  line-height: 21px;
+  margin: 0 0 10px 0;
+}
+
+.masonry-item-heading a {
+  color: #24a3ff;
+  text-decoration: none;
+}
+
+.masonry-item-text {
+  margin: 0 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 16px;
+  line-height: 22px;
+  color: #000000;
+  border-top: solid 4px #e6e6f0;
+}
+
+.post-heading {
+  margin-bottom: 10px;
+  font-size: 22px;
+  line-height: 1.18;
+  color: #323264;
+}
+@media screen and (min-width: 1024px) {
+  .post-heading {
+    font-size: 32px;
+  }
+}
+
+.paragraph-line {
+  padding-top: 20px;
+  border-top: solid 4px #e6e6f0;
+}
+
+.post-heading-list {
+  font-size: 18px;
+  line-height: 1.16;
+  color: #46466e;
+}
+@media screen and (min-width: 1024px) {
+  .post-heading-list {
+    font-size: 24px;
+  }
+}
+
+.post-item {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.4;
+  color: #f0145a;
+}
+
+@media screen and (min-width: 768px) {
+  .post-img {
+    margin: 0 auto;
+    width: 640px;
+  }
+}
+
+.descriptions-img {
+  font-size: 16px;
+  line-height: 1.4;
+  text-align: center;
+  color: #b3b3ba;
+}
+
+.paragraph-bottom-line {
+  padding-bottom: 40px;
+  border-bottom: solid 4px #e6e6f0;
+}
+
+.post-social {
+  margin-bottom: 40px;
+  display: flex;
+}
+@media screen and (max-width: 767px) {
+  .post-social {
+    justify-content: center;
+    margin-bottom: 60px;
+  }
+}
+
+.post-social-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 42px;
+  height: 42px;
+  background: #f5f5fa;
+  border-radius: 12px;
+}
+.post-social-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.post-social-fb {
+  fill: #435695;
+}
+
+.post-social-tg {
+  fill: #3cacdc;
+}
+
+.post-social-li {
+  fill: #1178b3;
+}
+
+.post-title {
+  margin-bottom: 40px;
 }/*# sourceMappingURL=main.css.map */
