--- a/scss/components/_backdrop.scss
+++ b/scss/components/_backdrop.scss
@@ -3,11 +3,14 @@
   z-index: 5;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   opacity: 1;
   transition: opacity $transition-basic;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: $main-soft;
 }
 .backdrop.is-hidden {
@@ -17,21 +20,23 @@
 }
 .modal {
   overflow: scroll;
-  background-color: $bg;
-
-  padding: 20px;
   @media screen and (max-width: 767px) {
-    height: 100%;
+    height: 100vh;
   }
   @media screen and (min-width: 768px) {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    width: 527px;
-    transform: translate(-50%, -50%);
-    box-shadow: 0px 15px 80px rgba(40, 40, 86, 0.5);
+    // position: absolute;
+    // left: 50%;
+    // top: 50%;
+    // width: 527px;
+    // transform: translate(-50%, -50%);
+
     border-radius: 12px;
   }
+}
+.modal-content {
+  background-color: $bg;
+  padding: 20px;
+  box-shadow: 0px 15px 80px rgba(40, 40, 86, 0.5);
 }
 .form-top {
   display: flex;
@@ -46,6 +51,7 @@
 
   color: $accent;
   @media screen and (min-width: 768px) {
+    margin-right: 50px;
     font-size: 32px;
     line-height: 1.18;
     background: $gradient-red;
