--- a/scss/publication/_publications-page.scss
+++ b/scss/publication/_publications-page.scss
@@ -19,18 +19,24 @@
     column-gap: 40px;
   }
 }
-
-.masonry-items {
+.masonry-item {
   margin-bottom: 20px;
-
   @media screen and (min-width: 1024px) {
     margin-bottom: 40px;
   }
 }
-.masonry-items:nth-child(n + 6) {
+.masonry-item:nth-child(n + 4) {
   @media screen and (max-width: 639px) {
     display: none;
   }
+}
+.masonry-item:nth-child(n + 5) {
+  @media screen and (min-width: 640px) and (max-width: 1023px) {
+    display: none;
+  }
+}
+.masonry-item.is-visible {
+  display: block;
 }
 .masonry-item-image {
   width: 100%;
@@ -59,6 +65,14 @@
 }
 
 // publications-pages
+.post-photo {
+  width: 100%;
+  margin: 0 auto 20px auto;
+  @media screen and (min-width: 1024px) {
+    margin: 0 auto 40px auto;
+    width: 909px;
+  }
+}
 .post-heading {
   margin-bottom: 10px;
   font-size: 22px;
