--- a/css/main.css
+++ b/css/main.css
@@ -2182,14 +2182,14 @@ h6 {
   margin-right: 6px;
 }
 
-.title-advantages-bgimg {
+.title-advantages-bg-img {
   margin-bottom: 20px;
   background-image: url(../../img/about-us-320.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
 @media screen and (min-width: 768px) {
-  .title-advantages-bgimg {
+  .title-advantages-bg-img {
     margin-bottom: 40px;
     background-image: url(../../img/about-us-768.jpg);
     background-repeat: no-repeat;
@@ -2197,7 +2197,7 @@ h6 {
   }
 }
 @media screen and (min-width: 1024px) {
-  .title-advantages-bgimg {
+  .title-advantages-bg-img {
     margin-bottom: 80px;
     background-image: url(../../img/about-us-1024.jpg);
     background-repeat: no-repeat;
