--- a/scss/about-us/_advantages.scss
+++ b/scss/about-us/_advantages.scss
@@ -55,7 +55,7 @@
   fill: $accent;
   margin-right: 6px;
 }
-.title-advantages-bgimg {
+.title-advantages-bg-img {
   margin-bottom: 20px;
 
   background-image: url(../../img/about-us-320.jpg);
